Fix bug with GrantedAuthorities, now Spring Security works perfectly. Add websocket to post new comments with no need to update the page. Delete various unused classes, add user activity tracking( whether the user is (on/off)line). Redesign the following pages: Login, Register, Forgot Password, Get in Touch. Now they use AJAX and JS Validation. Create 2 classes (UserUtils and Utils) with shared logic(DRY). Minify JS code.Add pagination for comments Пофикшен баг,связанный с GrantedAuthorities, теперь Spring Security работает должным образом. Добавил вебсокет для добавления комментариев в "в реальном времени". Удалил различные неиспользуемые классы, добавил отслеживание активности пользователя(онлайн или оффлайн).Передизайнил след. страницы: Логин, Регистрация, Забыл пароль, Свяжитесь с нами: теперь они используют AJAX и JS валидацию. Создал 2 класса (UserUtils and Utils), куда вынес общую логику(DRY)."Уменьшил" (оптимизировал) JS Code.Добавлена пагинация для комментариев.

--- a/src/main/webapp/WEB-INF/view/admin/deleteUser.html
+++ b/src/main/webapp/WEB-INF/view/admin/deleteUser.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,12 +29,14 @@
 </div>
 <main>
   <nav>
-    <a th:href="@{/admin/index}">Пользователи</a>
-    <a href="">Статьи</a>
-    <a href="">Роли</a>
-    <a href="">Токены</a>
-    <a href="">Рейтинг</a>
-    <a th:href="@{/}"> <img class="frame-logo" th:src="@{/resources/static/img/logo_white.svg}" alt="MatematiX"></a>
+    <div style="display: flex;flex-direction: column;position: fixed">
+      <a th:href="@{/}" style="margin-top:20px;margin-bottom:270px"><img class="frame-logo" th:src="@{/resources/static/img/logo_white.svg}" alt="MatematiX"></a>
+      <a th:href="@{/admin/index}">Пользователи</a>
+      <a href="">Статьи</a>
+      <a href="">Роли</a>
+      <a href="">Токены</a>
+      <a href="">Рейтинг</a>
+    </div>
   </nav>
   <div class="main" style="padding-top: 15px; padding-bottom: 50px;padding-left: 20px;min-height: 800px">
     <div class="main-nav">
@@ -58,5 +61,6 @@
       window.location.search = "name=" + document.getElementById("deleteInput").value;
     });
   </script>
+<script type="text/javascript" th:src="@{/resources/static/js/ping.js}" sec:authorize="isAuthenticated()"></script>
 </body>
 </html>
