--- a/src/main/webapp/WEB-INF/view/articles/Pythagorean.html
+++ b/src/main/webapp/WEB-INF/view/articles/Pythagorean.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="UTF-8">
@@ -179,6 +180,6 @@
     </div>
 
     <footer th:insert="~{base/footer :: copy}"></footer>
-
+    <script type="text/javascript" th:src="@{/resources/static/js/ping.js}" sec:authorize="isAuthenticated()"></script>
 </body>
 </html>
