--- a/src/main/webapp/WEB-INF/view/authorization/forgotPassword.html
+++ b/src/main/webapp/WEB-INF/view/authorization/forgotPassword.html
@@ -20,34 +20,59 @@
         <link rel="manifest" th:href="@{/resources/static/img/logo/site.webmanifest}">
     </head>
 
-    <body>
-    <div th:if="${TokenNotFound}" th:insert="~{base/toastNotFound :: toast}"></div>
+    <body style="overflow: hidden">
     <div class="main">
-        <div class="frame" style="height: 655px !important;">
-            <div class="left">
-                <a th:href="@{/}"><img class="frame-logo" th:src="@{/resources/static/img/logo_white.svg}" alt="MatematiX"></a>
-                <div class="desc">
+        <div class="frame--wrapper">
+           <div class="frame" style="height: 655px !important;">
+                <div class="frame--content">
                     <h2>Восстановление</h2>
-                    <h3>Восстановите доступ к аккаунту MatematiX</h3>
-                </div>
-            </div>
-            <div class="right">
-                <h2>Добро пожаловать!</h2>
+                    <div style="margin-bottom: 40px !important;">
+                        <div class="inputBox">
+                            <input required maxlength="45" type="text" id="username" name="username">
+                            <span>Логин / Email</span>
+                            <p style="top: 41px;right:1px" class="error error1" th:if="${notFound}">Пользователь не найден!</p>
+                        </div>
 
-
-
-                <form th:action="@{/auth/process_forgotPassword}" th:method="POST" class="form" style="margin-bottom: 40px !important;">
-                    <label for="username">Имя пользователя или E-mail</label>
-                    <input maxlength="45" placeholder="Введите имя или E-mail" type="text" id="username" name="username">
-                    <p class="error error1" th:if="${notFound}">Пользователь не найден!</p>
-
-                    <div class="flexbox-register-finish" style="margin-top: 200px !important;">
-                        <input type="submit" value="Подтвердить">
-                        <h4 class="noAccount"><a th:href="@{/auth/login}">Есть аккаунт?</a></h4>
+                        <div class="flexbox-register-finish" style="margin-top: 100px !important;position: relative">
+                            <input id="sendButton" type="submit" value="Подтвердить">
+                            <h4 class="noAccount"><a th:href="@{/auth/login}">Есть аккаунт?</a></h4>
+                        </div>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
     </body>
+    <script type="text/javascript" th:inline="javascript">
+        const error1 = document.querySelector(".error1");
+        $(document).ready(function() {
+            toastr.options.preventDuplicates = false;
+            toastr.options.progressBar = true;
+            const processResult = (data) => {
+                console.log(data);
+                if(!data)
+                    toastr.error("Попробуйте снова.","Ошибка!");
+                else
+                    toastr.info("На вашу почту отправлено письмо.");
+
+            }
+            $(document).ajaxSend(function(e,xhr,options) {
+                xhr.setRequestHeader("X-CSRF-TOKEN",[[${_csrf.token}]]);
+            });
+            $("#sendButton").on("click",function (event) {
+                event.preventDefault();
+                $.ajax({
+                    url: "/auth/ajax/process_forgotPassword",
+                    method: "POST",
+                    type: "POST",
+                    data: {username: $("#username").val()},
+                    success: processResult
+                });
+            });
+            $("#username").on("keyup",() => {
+                if($(this).val().length >= 1 && error1 != null)
+                    error1.classList.add("disappear");
+            })
+        })
+    </script>
 </html>
