--- a/src/main/webapp/WEB-INF/view/authorization/resetPassword.html
+++ b/src/main/webapp/WEB-INF/view/authorization/resetPassword.html
@@ -16,6 +16,7 @@
   <link rel="icon" type="image/png" sizes="16x16" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
   <link rel="manifest" th:href="@{/resources/static/img/logo/site.webmanifest}">
   <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="https://kit.fontawesome.com/43505ce75b.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
 </head>
@@ -23,102 +24,44 @@
 <body>
 <div th:if="${null ne success and success ne true}" th:insert="~{base/toastCustom :: toast}"/>
 <div class="main">
-  <div class="frame">
-    <div class="left">
-      <a th:href="@{/}"><img class="frame-logo" th:src="@{/resources/static/img/logo_white.svg}" alt="MatematiX"></a>
-      <div class="desc">
+  <div class="frame-wrapper" style="position: relative">
+    <div class="frame">
+      <div class="frame--content">
         <h2>Восстановление</h2>
-        <h3>Придумайте новый пароль</h3>
+        <form th:action="@{/auth/resetPassword}" th:object="${passwordDTO}" th:method="POST" class="form">
+          <div class="inputBox">
+            <input required class="js-input password-input" maxlength="60" th:name="password" th:id="password" th:type="password" >
+            <p style="top: 11px;right: 0px;cursor: pointer;position: absolute;" id="theEyeSpan_password"><ion-icon style="font-size:20px;color:#45a0da" content="password" class="theEye" name="eye-outline"></ion-icon></p>
+            <span>Пароль</span>
+          </div>
+
+          <div class="inputBox">
+            <input required class="js-input passwordAgain-input" maxlength="60" th:name="passwordAgain"  th:id="passwordAgain" th:type="password">
+            <p style="top: 11px;right: 0px;cursor: pointer;position: absolute;" id="theEyeSpan_passwordAgain"><ion-icon style="font-size:20px;color:#45a0da" content="passwordAgain" class="theEye" name="eye-outline"></ion-icon></p>
+            <span>Подтвердите пароль</span>
+            <div style="position: absolute;" id="doPasswordsMatchRespond"></div>
+          </div>
+          <input type="hidden" name="token" id="token" th:value="${token}">
+          <div class="flexbox-register-finish" style="margin-top: 200px !important;">
+            <input type="submit" value="Подтвердить">
+          </div>
+        </form>
       </div>
     </div>
-    <div class="right">
-      <h2>Добро пожаловать!</h2>
-
-
-
-      <form th:action="@{/auth/resetPassword}" th:object="${passwordDTO}" th:method="POST" class="form">
-        <div style="position: relative">
-          <div class="form-info password-info">
-            <ul>
-              <li>
-                <p>Поле не должно быть пустым.</p>
-              </li>
-              <li>
-                <p>Длина пароля должна быть больше 4 и меньше 61.</p>
-              </li>
-              <li>
-                <p>Пароли должны совпадать.</p>
-              </li>
-            </ul>
-          </div>
-          <label for="password">Новый пароль</label>
-          <input maxlength="60" placeholder="Введите новый пароль" type="password" id="password" name="password">
-          <img th:src="@{/resources/static/img/info.svg}" class="info-logo" alt="">
-        </div>
-
-        <label for="passwordAgain">Подтвердите пароль</label>
-        <input maxlength="60"  placeholder="Введите пароль" id="passwordAgain" type="password" name="passwordAgain">
-        <input type="hidden" name="token" id="token" th:value="${token}">
-        <div style="position: absolute;" id="doPasswordsMatchRespond"></div>
-        <div class="flexbox-register-finish" style="margin-top: 200px !important;">
-          <input type="submit" value="Подтвердить">
-        </div>
-      </form>
+    <div id="passwordRequirements" content="password" class="tooltip frame-helper" style="top: 160px;">
+      <div class="frame--content">
+        <ul>
+          <li id="isPasswordLengthValid">Длина пароля должна быть больше 4 и меньше 61.</li>
+          <li id="doPasswordsMatch">Пароли должны совпадать.</li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
-<script th:src="@{/resources/static/js/showInfo.js}"></script>
-<script type="text/javascript">
-  // https://stackoverflow.com/questions/1909441/how-to-delay-the-keyup-handler-until-the-user-stops-typing
-  function delay(callback, ms) {
-    let timer = 0;
-    return function() {
-      const context = this, args = arguments;
-      clearTimeout(timer);
-      timer = setTimeout(function () {
-        callback.apply(context, args);
-      }, ms || 0);
-    };
-  }
-  let funcPasswordAgain = (data) => {
-    $("#doPasswordsMatch").remove();
-    let element = `<p style="font-size:12px;margin-left:272px;margin-top: 3px;" id="doPasswordsMatch"> ${data === true ? 'Пароли не совпадают' : 'Пароли совпадают'}</p>`;
-    $("#doPasswordsMatchRespond").append(element);
-    if(data)
-      $("#doPasswordsMatch").css({'color': '#dc3545'});
-    else
-      $("#doPasswordsMatch").css({'color': '#28a745'});
-  }
-  $(document).ready(
-          function() {
-            $("#passwordAgain").bind("keyup",
-                    delay(
-                            function () {
-                              $.ajax({
-                                url: "/auth/ajax/doPasswordsNotMatch",
-                                type: "GET",
-                                data: ({passwordAgain: document.getElementById("passwordAgain").value,password: document.getElementById("password").value}),
-                                success: funcPasswordAgain
-                              });
-                            }
-                            ,700
-                    )
-            );
-            $("#password").bind("keyup",
-                    delay(
-                            function () {
-                              $.ajax({
-                                url: "/auth/ajax/doPasswordsNotMatch",
-                                type: "GET",
-                                data: ({passwordAgain: document.getElementById("passwordAgain").value,password: document.getElementById("password").value}),
-                                success: funcPasswordAgain
-                              });
-                            }
-                            ,700
-                    )
-            );
-          }
-  );
-</script>
+<script th:src="@{/resources/static/js/showHidePassword.js}" type="text/javascript"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script th:src="@{/resources/static/js/min/delay.js}"></script>
+<script th:src="@{/resources/static/js/min/showTooltipsAndValidatePasswords.js}"></script>
 </body>
 </html>
