--- a/src/main/webapp/WEB-INF/view/profile/index.html
+++ b/src/main/webapp/WEB-INF/view/profile/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="ru">
-
+<html lang="ru" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/resources/static/css/base/base.css}">
     <link rel="stylesheet" th:href="@{/resources/static/css/profile/main.css}">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
     <link rel="icon" type="image/png" sizes="32x32" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
     <link rel="icon" type="image/png" sizes="16x16" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
@@ -20,11 +19,13 @@
     <link  href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.js"></script>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script th:src="@{/resources/static/js/min/stomp.orig.js}"></script>
 </head>
 
 <body id="body">
 <header id="headerDiv">
-    <a th:href="@{/}"><img class="frame-logo" th:src="@{/resources/static/img/logo_white.svg}" alt="MatematiX"></a>
+    <a th:href="@{/}"><img src="" class="frame-logo" th:src="@{/resources/static/img/logo_white.svg}" alt="MatematiX"></a>
 </header>
 <main id="mainDiv">
     <nav>
@@ -36,11 +37,13 @@
             <li th:if="${canChangeAvatar}"><a class="nav-link" th:href="@{/}">Уведомления</a></li>
         </ul>
     </nav>
-    <div class="about">
+    <div class="about" style="position: relative">
+        <div th:if="${active}" style="z-index: 1000;border-radius: 50%;width: 22px;height: 22px;background-color: #55cd97;position: absolute;border: 5px solid #1e1e1e;left: 118px;top: 100px;"></div>
+        <div th:unless="${active}" style="z-index: 1000;border-radius: 50%;width: 22px;height: 22px;background-color: #a4b4bf;position: absolute;border: 5px solid #1e1e1e;left: 118px;top: 100px;"></div>
         <div class="avatar-wrapper">
             <label th:for="secretInput" style="cursor:pointer">
-                <img th:if="${hasAvatar}" th:id="avatar" alt="">
-                <img th:unless="${hasAvatar}" th:id="avatar" th:src="@{/resources/static/img/UnsetAvatar.gif}" alt="">
+                <img src="" th:if="${hasAvatar}" th:id="avatar" alt="">
+                <img src="" th:unless="${hasAvatar}" th:id="avatar" th:src="@{/resources/static/img/UnsetAvatar.gif}" alt="">
             </label>
             <form th:if="${canChangeAvatar}" enctype="multipart/form-data" th:id="theForm" th:action="@{/uploadAvatar(${_csrf.parameterName}=${_csrf.token})}" th:method="POST">
                 <input th:id="secretInput" th:name="file" type="file" style="display: none" accept="image/*">
@@ -59,24 +62,24 @@
             <p th:text="'Уровень: ' + ${lvl}"></p>
         </div>
     </div>
-    <div id="commentsDiv" class="comments">
+    <div id="commentsDiv" style="margin-bottom: 60px" class="comments">
         <div class="comments-header">
             <p style="display: inline-block">Комментарии</p>
             <div class="sort-settings">
                 <ul class="sort-settings-ul">
                     <li class="sort-settings-li">популярные</li>
                     <li class="sort-settings-li">старые</li>
-                    <li class="sort-settings-li">новые</li>
+                    <li class="sort-settings-li active">новые</li>
                 </ul>
             </div>
         </div>
-        <div class="comments-content">
+        <div  class="comments-content">
                 <div class="writeCommentSuggestionDiv">
                     <div style="display: flex;gap:50px;">
                         <div class="avatar-wrapper" style="width: 72px !important; height: 72px !important;border: none !important;">
                             <a th:href="@{/profile}">
-                                <img th:if="${hasMyAvatar}" th:id="avatarComments" alt="">
-                                <img th:unless="${hasMyAvatar}" th:id="avatarComments" th:src="@{/resources/static/img/UnsetAvatar.gif}" alt="">
+                                <img src="" th:if="${hasMyAvatar}" th:id="avatarComments" alt="">
+                                <img src="" th:unless="${hasMyAvatar}" th:id="avatarComments" th:src="@{/resources/static/img/UnsetAvatar.gif}" alt="">
                             </a>
                         </div>
                         <form content="0" th:id="sendCommentForm" th:method="POST" th:action="@{/createComment}" style="width: 100%">
@@ -91,16 +94,29 @@
                 </div>
 
         </div>
-        <div th:if="${hasComments}" class="comment" th:each="comment : ${commentsOnTheWall}">
-            <div style="display: flex;gap:50px;">
-                <div class="avatar-wrapper" style="width: 72px !important; height: 72px !important;border: none !important;">
-                    <a th:href="@{/profile/{name}(name=${comment.username})}">
-                        <img style="width: 72px;height: 72px" th:if="${comment.username.length <= 0}"  th:src="@{/resources/static/img/UnsetAvatar.gif}" alt="">
-                        <img style="width: 72px;height: 72px" th:unless="${comment.username.length <= 0}"  th:src="@{'data:image/' + ${comment.format} + ';base64,' + ${comment.avatar}}" alt="">
-                    </a>
+        <div id="theDiv">
+            <div style="margin-top:70px;position: relative" th:if="${hasComments}" class="comment" th:each="comment : ${commentsOnTheWall}">
+                <div style="color:#e1e1e1;font-size:11px;position: absolute;right: 0;width: 100%;height: 20px;top:-21px;display: flex;justify-content: flex-end" th:text="${comment.date}"></div>
+                <div style="display: flex;gap:50px;position: relative">
+                    <div class="avatar-wrapper" style="width: 72px !important; height: 72px !important;border: none !important;position: relative">
+                        <a style="position: relative" th:href="@{/profile/{name}(name=${comment.username})}">
+                            <img src="" style="width: 72px;height: 72px" th:if="${comment.avatar eq null }"  th:src="@{/resources/static/img/UnsetAvatar.gif}" alt="">
+                            <img src="" style="width: 72px;height: 72px" th:unless="${comment.avatar eq null}"  th:src="@{'data:image/' + ${comment.format} + ';base64,' + ${comment.avatar}}" alt="">
+                        </a>
+                    </div>
+                    <div style="position:absolute;top:52px;left:50px;border-radius:50%;width:17px;height: 17px;background-color:#55cd97;border:3px solid #1e1e1e" th:if="${comment.active}"></div>
+                    <div style="position:absolute;top:52px;left:50px;border-radius:50%;width:17px;height: 17px;background-color:#a4b4bf;border:3px solid #1e1e1e" th:unless="${comment.active}"></div>
+                        <textarea style="cursor: pointer" readonly th:class="toBeAutoGrown" th:text="${comment.content}"></textarea>
                 </div>
-                    <textarea readonly th:class="toBeAutoGrown" th:text="${comment.content}"></textarea>
+                <div style="display: flex;justify-content: flex-end;position: absolute;right: 2px;height: 20px;width: 100%  ">
+                    <p style="color: white"><span style="font-size: 14px;cursor:pointer"  class="dislike">👎</span><span class="rating" style="font-size:14px;margin-left: 5px;margin-right: 5px" th:text="${comment.rating}">0</span><span style="font-size: 15px;cursor:pointer" class="like">👍</span></p>
+                </div>
             </div>
+
+            <div id="loadMoreButtonDiv" th:if="${totalPages > 1}" style="margin-top: 100px;width: 100%;text-align: center;">
+                <button id="loadMoreButton">Load More</button>
+            </div>
+
         </div>
     </div>
 </main>
@@ -122,92 +138,12 @@
 
     <div style="text-align: center;width: 100%"><a id="submitChangeAvatar" href="">Подтвердить</a></div>
 </div>
-<div id="overlay">
+<div id="overlay" style="z-index: 1001 !important;">
 
 </div>
-<script type="text/javascript" th:if="${canChangeAvatar}">
-    let croppingDiv = document.getElementById("divForCropping");
-    let fileInput = document.getElementById("secretInput");
-    let croppingImage = document.getElementById("croppingImage");
-    let main = document.getElementById("mainDiv");
-    let header = document.getElementById("headerDiv");
-    let body = document.getElementById("body")
-    let overlay = document.getElementById("overlay")
-    let submitChangeAvatar = document.getElementById("submitChangeAvatar");
-    let theForm = document.getElementById("theForm");
-    submitChangeAvatar.addEventListener("click",(event) => {
-        event.preventDefault();
-        let data = cropper.getData();
-        document.getElementById("x").value = data.x;
-        document.getElementById("y").value = data.y;
-        document.getElementById("width").value = data.width;
-        document.getElementById("height").value = data.height;
-        document.getElementById("scaleX").value = data.scaleX;
-        document.getElementById("scaleY").value = data.scaleY;
-        theForm.submit();
-    })
-    let uploadedImage = "";
-    let choosingAvatar = false;
-    let cropper = null;
-    let cropperExists = false;
-
-    let close = () => {
-        choosingAvatar = false;
-        croppingDiv.style.display = "none";
-        main.style.filter = "none";
-        header.style.filter = "none";
-        overlay.style.visibility = "hidden";
-        fileInput.value = null;
-
-    }
-    overlay.addEventListener("click",(event) => {
-        if(choosingAvatar) {
-            event.preventDefault();
-            close()
-        }
-    })
-    document.addEventListener("keydown",(event) => {
-        const key = event.key;
-        if(key === "Escape" && choosingAvatar) {
-            close()
-        }
-    })
-
-    fileInput.addEventListener("change",() => {
-        if(fileInput.files[0] && fileInput.files) {
-            const reader = new FileReader();
-            reader.addEventListener("load",() => {
-                choosingAvatar = true;
-                uploadedImage = reader.result;
-                croppingImage.setAttribute("src",uploadedImage);
-                let element = document.getElementById("previewDiv");
-                let element2 = document.getElementById("previewDivComments");
-                croppingDiv.style.display = "block";
-                overlay.style.visibility = "unset";
-                if(!cropperExists) {
-                    cropper = new Cropper(croppingImage, {
-                        aspectRatio: 1,
-                        viewMode: 2,
-                        preview: [element,element2],
-                        minCropBoxHeight: 138,
-                        minCropBoxWidth: 138,
-                        dragMode: "none",
-                        cropBoxResizable: false,
-
-                    });
-                    cropperExists = true;
-                }
-                else {
-                    cropper.replace(uploadedImage);
-                }
-            })
-            reader.readAsDataURL(fileInput.files[0]);
-        }
-    });
-
-
-</script>
+<script type="text/javascript" th:src="@{/resources/static/js/min/canChangeAvatar.js}" th:if="${canChangeAvatar}"></script>
 <script th:if="${hasAvatar}" th:inline="javascript">
+    let name = [[${name}]];
     let theAvatar = document.getElementById("avatar");
     let str = [[${avatar}]];
     let format = [[${avatarFormat}]];
@@ -230,9 +166,6 @@
     let buttonAppear = () => {
         sendButton.style.visibility = "visible";
     };
-    sendButton.addEventListener("click",() => {
-       commentForm.submit();
-    });
     let func = () => {
         if(textArea.value.length === 0) {
             buttonDisappear();
@@ -248,11 +181,108 @@
         commentForm.setAttribute("content",length);
     });
 </script>
-<script type="module">
+<script type="text/javascript" th:src="@{/resources/static/js/ping.js}" sec:authorize="isAuthenticated()"></script>
+<script th:inline="javascript" th:type="module">
     import autosize from "../../../resources/static/js/autosize.js";
+    const pingAutoSize = () => {
+        autosize(document.getElementsByClassName("toBeAutoGrown"));
+    }
+    function formatLikes(num) {
+        return Math.abs(num) > 999 ? Math.sign(num)*((Math.abs(num)/1000).toFixed(1)) + 'K' : Math.sign(num)*Math.abs(num)
+    }
 
-    autosize(textArea);
-    autosize(document.getElementsByClassName("toBeAutoGrown"));
+    $(document).ready( function() {
+            connect();
+            pingAutoSize();
+            autosize(textArea);
+            $(".rating").each(function(index,element) {
+                $(element).text(formatLikes($(element).text()));
+            });
+        }
+    );
+    let stompClient = null;
+
+    function connect() {
+        let socket = new SockJS("/listenToNewComments")
+        stompClient = Stomp.over(socket);
+        stompClient.connect({}, function() {
+            stompClient.subscribe(`/user/` + [[${name}]] + `/queue/messages`, function(data) {
+                addComment(JSON.parse(data.body));
+            });
+        });
+    }
+    $("#sendButton").on("click",sendMessage);
+    function sendMessage() {
+        stompClient.send("/application/sendComment", {},
+            JSON.stringify({
+                'username':[[${currentUserName}]],
+                'recipient': [[${name}]],
+                'content':$("#content").val(),
+                'isActive': true,
+                "date": null}));
+    }
+    let active = `<div style="position:absolute;top:52px;left:50px;border-radius:50%;width:17px;height: 17px;background-color:#55cd97;border:3px solid #1e1e1e"></div>`
+    let notActive = `<div style="position:absolute;top:52px;left:50px;border-radius:50%;width:17px;height: 17px;background-color:#a4b4bf;border:3px solid #1e1e1e"></div>`
+    function getComment(obj,rating,date) {
+        let img = null;
+        if(obj.avatar == null || obj.avatar.length <= 0)
+            img = `<img src="/resources/static/img/UnsetAvatar.gif" style="width:72px;height: 72px;" alt="${obj.username}'s avatar">`;
+        else
+            img = `<img src="data:image/${obj.format};base64,${obj.avatar}" style="width:72px;height: 72px;" alt="${obj.username}'s avatar">`;
+        let status = null
+        if(obj.active)
+            status = active;
+        else
+            status = notActive;
+        let element =
+            `<div style="margin-top:70px;position: relative" class="comment">
+                <div style="color:#e1e1e1;font-size:11px;position: absolute;right: 0;width: 100%;height: 20px;top:-21px;display: flex;justify-content: flex-end">${obj.date}</div>
+                <div style="position:relative; display: flex;gap:50px;">
+                <div class="avatar-wrapper" style="position: relative;width: 72px !important; height: 72px !important; border: none !important;">
+                    <a style="position: relative" href="/profile/${obj.username}">
+                        ${img}
+                    </a>
+                </div>
+                ${status}
+                <textarea readonly style="cursor: pointer;overflow: hidden;overflow-wrap:break-word;" class="toBeAutoGrown">${obj.content}</textarea>
+            </div>
+                <div style="display: flex;justify-content: flex-end;position: absolute;right: 2px;height: 20px;width: 100%  ">
+                    <p style="color: white"><span style="font-size: 14px;cursor:pointer"  class="dislike">👎</span><span class="rating" style="font-size:14px;margin-left: 5px;margin-right: 5px">${formatLikes(obj.rating)}</span><span style="font-size: 15px;cursor:pointer" class="like">👍</span></p>
+                </div>
+            </div>`
+        return element;
+    }
+    function addComment(obj) {
+        let elem = getComment(obj);
+        $("#theDiv").prepend(elem);
+        $("#content").val('');
+        commentForm.setAttribute("content",0);
+        func();
+        pingAutoSize();
+    }
+    if([[${totalPages}]] > 1) {
+        let totalPages = [[${totalPages}]];
+        let currentPage = 1;
+        const showComments = (data) => {
+            $(data).each(function(index,item) {
+                let elem = getComment(item);
+                $(elem).insertBefore("#loadMoreButtonDiv")
+                if(totalPages == currentPage)
+                    $("#loadMoreButtonDiv").remove();
+            });
+        }
+        $(document).ready(function() {
+            $("#loadMoreButton").click(function(event) {
+                event.preventDefault();
+                currentPage+=1;
+                $.ajax({
+                    url: "/ajax/nextComments",
+                    data: {currentPage: currentPage,user: [[${name}]]},
+                    success: showComments
+                });
+            });
+        });
+    }
 </script>
 
 </body>
