--- a/src/main/webapp/resources/static/css/getInTouch.css
+++ b/src/main/webapp/resources/static/css/getInTouch.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     justify-content: space-around;
-    background-color: #313C48;
+    background-color: #1e1e1e;
     color: white;
 }
 input[type="text"],input[type="email"],textarea {
@@ -9,7 +9,7 @@ input[type="text"],input[type="email"],textarea {
 }
 input[type="submit"] {
     display: block;
-    background-color: #25CCA4;
+    background-color: #45a0da;
     width: 1201px;
     cursor: pointer;
     transition: all 0.5s ease-out;
@@ -68,11 +68,11 @@ textarea {
 }
 textarea:focus {
     outline: none;
-    border: 1px solid rgb(37, 204, 164);
+    border: 1px solid #45a0da;
 }
 
 input[type="submit"]:focus,input[type="text"]:focus,input[type="email"]:focus {
-    border: 1px solid rgb(37, 204, 164);
+    border: 1px solid #45a0da;
     outline: none;
 }
 
@@ -106,16 +106,18 @@ a:hover {
     color: transparent;
     -webkit-background-clip: text;
 }
-.input-error {
-    border: solid 1px #ff0000c7 !important;
-}
-.input-error-textarea {
-     border: solid 1px #ff0000c7 !important;
- }
 .input-error-textarea:hover,.input-error-textarea:focus {
     margin-bottom: 0px;
 }
 input[type="submit"]:hover {
     transform: translateY(-2px);
     box-shadow: 2px 11px 12px 1px rgba(0, 0, 0, 0.32);
+}
+@keyframes rotation{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+    }
 }
