--- a/src/main/webapp/WEB-INF/view/authorization/register.html
+++ b/src/main/webapp/WEB-INF/view/authorization/register.html
@@ -16,166 +16,122 @@
     <link rel="icon" type="image/png" sizes="16x16" th:href="@{/resources/static/img/logo/apple-touch-icon.png}">
     <link rel="manifest" th:href="@{/resources/static/img/logo/site.webmanifest}">
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://kit.fontawesome.com/43505ce75b.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
 </head>
 
-<body>
-<div class="main">
-    <div class="frame">
-        <div class="left">
-            <a th:href="@{/}"><img class="frame-logo" th:src="@{/resources/static/img/logo_white.svg}" alt="MatematiX"></a>
-            <div class="desc">
+<body style="overflow: hidden">
+<div th:if="${null ne success and success ne true}" th:insert="~{base/toastCustom :: toast}"/>
+<div class="main" style="position: relative">
+    <div class="frame-wrapper" style="position: relative">
+        <div class="frame">
+            <div class="frame--content">
                 <h2>Регистрация</h2>
-                <h3>Создайте новый аккаунт MatematiX</h3>
+                <form th:action="@{/auth/register}" th:method="POST" class="form" th:object="${dto}">
+                    <div class="inputBox">
+                        <input required class="js-input name-input" maxlength="15" th:name="name" th:type="text" th:id="name" th:value="${dto.getName()}">
+                        <span>Логин</span>
+                        <div style="position: absolute;" id="isLoginTakenRespond"></div>
+                    </div>
+                    <div class="inputBox">
+                        <input required class="js-input email-input" maxlength="45" th:name="email" th:type="text" th:id="email" th:value="${dto.getEmail()}">
+                        <span>Почта</span>
+                        <div style="position: absolute;" id="isEmailTakenRespond"></div>
+                    </div>
+
+                    <div class="inputBox">
+                        <input required class="js-input password-input" maxlength="60" th:name="password"  th:value="${dto.getPassword()}" th:id="password" th:type="password" >
+                        <p style="top: 11px;right: 0px;cursor: pointer;position: absolute;" id="theEyeSpan_password"><ion-icon style="font-size:20px;color:#45a0da" content="password" class="theEye" name="eye-outline"></ion-icon></p>
+                        <span>Пароль</span>
+                    </div>
+
+                    <div class="inputBox">
+                        <input required class="js-input passwordAgain-input" maxlength="60" th:name="passwordAgain"  th:id="passwordAgain" th:type="password">
+                        <p style="top: 11px;right: 0px;cursor: pointer;position: absolute;" id="theEyeSpan_passwordAgain"><ion-icon style="font-size:20px;color:#45a0da" content="passwordAgain" class="theEye" name="eye-outline"></ion-icon></p>
+                        <span>Подтвердите пароль</span>
+                        <div style="position: absolute;" id="doPasswordsMatchRespond"></div>
+                    </div>
+                    <div class="flexbox-register-finish">
+                        <input th:type="submit" class="submit" th:value="Зарегестрироваться">
+                        <h4 class="noAccount"><a th:href="@{/auth/login}">Есть Аккаунт?</a> </h4>
+                    </div>
+                </form>
             </div>
         </div>
-        <div class="right">
-            <h2>Добро пожаловать!</h2>
-            <form th:action="@{/auth/register}" th:method="POST" class="form" th:object="${dto}">
-
-
-                <div style="position: relative">
-                    <div class="form-info name-info">
-                        <ul>
-                            <li>
-                                <p>Имя не должно быть занято.</p>
-                            </li>
-                            <li>
-                                <p>Длина имени должна быть больше 4 и меньше 16.</p>
-                            </li>
-                            <li>
-                                <p>Имя должно состоять из латинских букв и/или цифр.</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <label th:for="name">Имя пользователя</label>
-                    <input class="js-input name-input" maxlength="15" th:name="name" placeholder="Введите имя пользователя" th:type="text" th:id="name" th:value="${dto.getName()}">
-                    <img th:unless="${#fields.hasErrors('name')}" th:src="@{/resources/static/img/info.svg}" class="info-logo" alt="">
-                    <img th:if="${#fields.hasErrors('name')}" th:src="@{/resources/static/img/info_red.svg}" class="info-logo" alt="">
-                    <div style="position: absolute;" id="isLoginTakenRespond"></div>
-                </div>
-
-
-
-                <div style="position: relative">
-                    <div class="form-info email-info">
-                        <ul>
-                            <li>
-                                <p>Почта не должна быть занята.</p>
-                            </li>
-                            <li>
-                                <p>Длина эл. почты должна быть больше 4 и меньше 46.</p>
-                            </li>
-                            <li>
-                                <p>Поле не должно быть пустым.</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <label th:for="email">Email</label>
-                    <input class="js-input email-input" maxlength="45" th:name="email" placeholder="Введите E-mail" th:type="text" th:id="email" th:value="${dto.getEmail()}">
-                    <img th:unless="${#fields.hasErrors('email')}" th:src="@{/resources/static/img/info.svg}" class="info-logo" alt="">
-                    <img th:if="${#fields.hasErrors('email')}" th:src="@{/resources/static/img/info_red.svg}" class="info-logo" alt="">
-                    <div style="position: absolute;" id="isEmailTakenRespond"></div>
-                </div>
-
-
-
-                <div style="position: relative">
-                    <div class="form-info password-info">
-                        <ul>
-                            <li>
-                                <p>Поле не должно быть пустым.</p>
-                            </li>
-                            <li>
-                                <p>Длина пароля должна быть больше 4 и меньше 61.</p>
-                            </li>
-                            <li>
-                                <p>Пароли должны совпадать.</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <label th:for="password">Пароль</label>
-                    <input class="js-input password-input" maxlength="60" th:name="password"  th:value="${dto.getPassword()}"  placeholder="Введите пароль" th:id="password" th:type="password" >
-                    <img th:unless="${#fields.hasErrors('password')}" th:src="@{/resources/static/img/info.svg}" class="info-logo" alt="">
-                    <img th:if="${#fields.hasErrors('password')}" th:src="@{/resources/static/img/info_red.svg}" class="info-logo" alt="">
-                </div>
-
-
-
-                <div style="position: relative">
-                    <div class="form-info passwordAgain-info">
-                        <ul>
-                            <li>
-                                <p>Поле не должно быть пустым.</p>
-                            </li>
-                            <li>
-                                <p>Длина пароля должна быть больше 4 и меньше 61.</p>
-                            </li>
-                            <li>
-                                <p>Пароли должны совпадать.</p>
-                            </li>
-                        </ul>
-                    </div>
-                    <label th:for="passwordAgain">Подтвердите пароль</label>
-                    <input class="js-input passwordAgain-input" maxlength="60" th:name="passwordAgain"  placeholder="Введите пароль" th:id="passwordAgain" th:type="password">
-                    <img th:unless="${#fields.hasErrors('passwordAgain')}" th:src="@{/resources/static/img/info.svg}" class="info-logo" alt="">
-                    <img th:if="${#fields.hasErrors('passwordAgain')}" th:src="@{/resources/static/img/info_red.svg}" class="info-logo" alt="">
-                    <div style="position: absolute;" id="doPasswordsMatchRespond"></div>
-                </div>
-
-
-                <div class="flexbox-register-finish">
-                    <input th:type="submit" class="submit" th:value="Зарегестрироваться">
-                    <h4 class="noAccount"><a th:href="@{/auth/login}">Есть Аккаунт?</a> </h4>
-                </div>
-            </form>
+        <div id="loginRequirements" content="name" class="tooltip frame-helper" style="top: 154px;">
+            <div class="frame--content">
+                <ul>
+                    <li id="isLoginTaken">Имя не должно быть занято.</li>
+                    <li id="isLoginLengthValid">Длина имени должна быть больше 4 и меньше 16.</li>
+                    <li id="isLoginValid">Имя должно состоять из латинских букв и/или цифр.</li>
+                </ul>
+            </div>
+        </div>
+        <div id="emailRequirements" content="email" class="tooltip frame-helper" style="top: 265px;">
+            <div class="frame--content">
+                <ul>
+                    <li id="isEmailTaken">Почта не должна быть занята.</li>
+                    <li id="isEmailLengthValid">Длина эл. почты должна быть больше 4 и меньше 46.</li>
+                </ul>
+            </div>
+        </div>
+        <div id="passwordRequirements" content="password" class="tooltip frame-helper" style="top: 374px;">
+            <div class="frame--content">
+                <ul>
+                    <li id="isPasswordLengthValid">Длина пароля должна быть больше 4 и меньше 61.</li>
+                    <li id="doPasswordsMatch">Пароли должны совпадать.</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
-<script th:src="@{/resources/static/js/showInfo.js}"></script>
+<script th:src="@{/resources/static/js/showHidePassword.js}" type="text/javascript"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script th:src="@{/resources/static/js/min/delay.js}"></script>
 <script type="text/javascript">
-    // https://stackoverflow.com/questions/1909441/how-to-delay-the-keyup-handler-until-the-user-stops-typing
-    function delay(callback, ms) {
-        let timer = 0;
-        return function() {
-            const context = this, args = arguments;
-            clearTimeout(timer);
-            timer = setTimeout(function () {
-                callback.apply(context, args);
-            }, ms || 0);
-        };
-    }
-
-    let funcSuccessLogin = (data) => {
-        $("#respondFromServerLogin").remove();
-        let element = `<p style="font-size:12px;margin-left:300px;margin-top: 3px;" id="respondFromServerLogin"> ${data === true ? 'Имя уже занято' : 'Имя свободно'}</p>`;
-        $("#isLoginTakenRespond").append(element);
-        if(data)
-            $("#respondFromServerLogin").css({'color': '#dc3545'});
+    const loginMatch = new RegExp(`(^\\w+$)`);
+    const validateLogin = () => {
+        let isLoginLengthValid = document.getElementById("isLoginLengthValid");
+        let isLoginValid = document.getElementById("isLoginValid");
+        let login_ = document.getElementById("name");
+        let loginLen = document.getElementById("name").value.length;
+        if((loginLen > 4 && loginLen < 16))
+            isLoginLengthValid.classList.add("valid");
         else
-            $("#respondFromServerLogin").css({'color': '#28a745'});
-    }
-    let funcSuccessEmail = (data) => {
-        $("#respondFromServerEmail").remove();
-        let element = `<p style="font-size:12px;margin-left:300px;margin-top: 3px;" id="respondFromServerEmail"> ${data === true ? 'Почта уже занята' : 'Почта свободна'}</p>`;
-        $("#isEmailTakenRespond").append(element);
-        if(data)
-            $("#respondFromServerEmail").css({'color': '#dc3545'});
+            isLoginLengthValid.classList.remove("valid");
+        if(loginMatch.test(login_.value))
+            isLoginValid.classList.add("valid");
         else
-            $("#respondFromServerEmail").css({'color': '#28a745'});
+            isLoginValid.classList.remove("valid");
     }
-    let funcPasswordAgain = (data) => {
-        $("#doPasswordsMatch").remove();
-        let element = `<p style="font-size:12px;margin-left:272px;margin-top: 3px;" id="doPasswordsMatch"> ${data === true ? 'Пароли не совпадают' : 'Пароли совпадают'}</p>`;
-        $("#doPasswordsMatchRespond").append(element);
-        if(data)
-            $("#doPasswordsMatch").css({'color': '#dc3545'});
+    const funcSuccessLogin = (data) => {
+        let isLoginTaken = document.getElementById("isLoginTaken");
+        if(!data)
+            isLoginTaken.classList.add(`valid`);
         else
-            $("#doPasswordsMatch").css({'color': '#28a745'});
+            isLoginTaken.classList.remove("valid");
+        validateLogin();
     }
-
-    $(document).ready(
-        function() {
-            $("#name").bind("keyup",
+    const validateEmail = () => {
+        let isEmailLengthValid = document.getElementById("isEmailLengthValid");
+        let emailLen = document.getElementById("email").value.length;
+        if((emailLen > 4 && emailLen < 46))
+            isEmailLengthValid.classList.add("valid");
+        else
+            isEmailLengthValid.classList.remove("valid");
+    }
+    const funcSuccessEmail = (data) => {
+        let isEmailTaken = document.getElementById("isEmailTaken");
+        if(!data)
+            isEmailTaken.classList.add("valid");
+        else
+            isEmailTaken.classList.remove("valid");
+        validateEmail();
+    }
+    $(document).ready(function() {
+            $("#name").on("keyup",
                 delay(
                     function () {
                         $.ajax({
@@ -185,10 +141,10 @@
                             success: funcSuccessLogin
                         });
                     }
-                    ,700
+                    ,500
                 )
             );
-            $("#email").bind("keyup",
+            $("#email").on("keyup",
                 delay(
                     function () {
                         $.ajax({
@@ -201,34 +157,8 @@
                     ,700
                 )
             );
-            $("#passwordAgain").bind("keyup",
-                delay(
-                    function () {
-                        $.ajax({
-                            url: "/auth/ajax/doPasswordsNotMatch",
-                            type: "GET",
-                            data: ({passwordAgain: document.getElementById("passwordAgain").value,password: document.getElementById("password").value}),
-                            success: funcPasswordAgain
-                        });
-                    }
-                    ,700
-                )
-            );
-            $("#password").bind("keyup",
-                delay(
-                    function () {
-                        $.ajax({
-                            url: "/auth/ajax/doPasswordsNotMatch",
-                            type: "GET",
-                            data: ({passwordAgain: document.getElementById("passwordAgain").value,password: document.getElementById("password").value}),
-                            success: funcPasswordAgain
-                        });
-                    }
-                    ,700
-                )
-            );
-        }
-    );
+        });
 </script>
+<script th:src="@{/resources/static/js/min/showTooltipsAndValidatePasswords.js}"></script>
 </body>
 </html>
