--- a/src/main/webapp/WEB-INF/view/bookmarks.html
+++ b/src/main/webapp/WEB-INF/view/bookmarks.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <head>
         <meta charset="UTF-8">
@@ -23,6 +24,7 @@
             </ol>
         </main>
         <footer th:insert="~{base/footer :: copy}"></footer>
+        <script type="text/javascript" th:src="@{/resources/static/js/ping.js}" sec:authorize="isAuthenticated()"></script>
     </body>
 
 </html>
