--- a/src/main/webapp/resources/static/css/admin/base.css
+++ b/src/main/webapp/resources/static/css/admin/base.css
@@ -4,14 +4,15 @@ main {
 }
 body {
     min-height: 100vh;
+    background: #2e2e2e;
 }
 nav {
     background-color: #1E1E1E;
-    display: flex;
     flex-direction: column;
     padding-left: 20px;
     padding-right: 20px;
     justify-content: center;
+    min-width: 270px;
 }
 .upper-div {
     border-bottom: solid 1px #030303;
@@ -35,7 +36,7 @@ nav a:link, nav a:visited, nav a:hover {
     font-style: normal;
     font-weight: 500;
     font-size: 25px;
-
+    margin-left: 10px;
     margin-bottom: 40px;
 }
 .frame-logo {
@@ -59,20 +60,6 @@ p {
     font-weight: 500;
     font-size: 18px;
     cursor: pointer;
-}
-.upper-div div input[type="text"] {
-    width: 600px;
-    height: 30px;
-    padding-right: 30px;
-    padding-left: 10px;
-}
-.upper-div div input[type="image"] {
-    position: absolute;
-    width: 50px;
-    right: 750px;
-    padding-right: 10px;
-    border-left: 1px solid black;
-    padding-left: 10px;
 }
 thead tr td {
     font-size: 22px;
@@ -125,13 +112,6 @@ table {
     position: absolute;
     left: 160px;
     bottom: 4px;
-}
-
-.fix-search {
-    padding-right: 50px !important;
-}
-.fix-find {
-    right: 735px !important;
 }
 .main-nav a:link, .main-nav a:visited, .main-nav a:hover {
     text-decoration: none;
@@ -194,4 +174,52 @@ form input[type="submit"],#loadButton {
     margin-bottom: 2px;
     padding-left: 5px;
     border-radius: 0;
+}
+.searchBox {
+    position: relative;
+    background: white;
+    display: flex;
+    justify-content: space-between;
+    transition: 0.5s all;
+    overflow: hidden;
+    box-shadow: 0 25px 35px rgba(0,0,0,0.1);
+    width: 624px;
+    height: 30px;
+}
+.searchBox .search {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 60px;
+    height: 30px;
+    font-size: 1.5em;
+    cursor: pointer;
+    background: white;
+}
+.searchBox .erase {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    font-size: 1.25em;
+    background: white;
+}
+.searchBox .searchInput {
+    position: absolute;
+    left: 60px;
+    width: calc(100% - 60px);
+    height: 100%;
+    line-height: 30px;
+}
+.searchBox .searchInput input {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 1.25em;
 }
